# ventureoracle_2026

./: .env  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  reproduce_bug.py  run_test.py
alembic/: env.py
alembic/versions/: 1c33cb9b1e91_initial_migration.py
src/ventureoracle/: __init__.py  cli.py  config.py  scheduler.py
src/ventureoracle/analysis/: prompts.py  style.py
src/ventureoracle/api/: app.py
src/ventureoracle/db/: database.py  models.py
src/ventureoracle/discovery/: recommender.py  search.py
src/ventureoracle/ingestion/: base.py  file_import.py  linkedin.py  rss.py  substack.py
src/ventureoracle/llm/: client.py
src/ventureoracle/prediction/: engine.py  tracker.py
tasks/: lessons.md  todo.md
tests/: conftest.py  test_analysis.py  test_cli.py  test_discovery.py  test_ingestion.py  test_integration.py  test_models.py  test_prediction.py  test_tool_id_uniqueness.py
web/: out.html
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/api/classify/: route.ts
web/src/app/api/report/: route.ts
web/src/app/contrarian-brief/: page.tsx
web/src/app/discoveries/: page.tsx
web/src/app/predictions/: page.tsx
web/src/app/profile/: page.tsx
web/src/components/: Sidebar.tsx
web/src/lib/: api.ts
